<resources>
    <string name="app_name">Auto Escola Anjos</string>
    <string name="title_activity_main_principal">Início</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nome do aluno</string>
    <string name="nav_header_subtitle">aluno@email.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_tarefa">Tarefas</string>
    <string name="menu_sobre">Sobre</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_meusdados">Meus Dados</string>
    <string name="menu_seguranca">Segurança</string>
    <string name="menu_sair">Sair</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
