<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_checklist"
            android:icon="@drawable/ic_menu_tarefa"
            android:title="@string/menu_tarefa" />
        <item
            android:id="@+id/nav_sobre"
            android:icon="@drawable/ic_menu_sobre"
            android:title="@string/menu_sobre" />
    </group>

    <item android:title="@string/menu_config">
        <menu>
            <item
                android:id="@+id/nav_meusdados"
                android:icon="@drawable/ic_menu_meusdados"
                android:title="@string/menu_meusdados" />
            <item
                android:id="@+id/nav_seguranca"
                android:icon="@drawable/ic_menu_seg"
                android:title="@string/menu_seguranca" />
            <item
                android:id="@+id/nav_sair"
                android:title="@string/menu_sair" />
        </menu>
    </item>

</menu>
